fixed layout sizing so sidebar no longer overlaps

--- a/src/pages/Layout/Layout.css
+++ b/src/pages/Layout/Layout.css
@@ -9,7 +9,7 @@
 .SidebarContainer {
   display: flex;
   height: 100vh;
-  width: 10vw;
+  flex-grow: 1;
   align-items: center;
   padding-left: 2%;
 }
@@ -29,5 +29,5 @@
 }
 
 .OutletContainer {
-  width: 90vw;
+  flex-grow: 9;
 }
